--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>reto random 2</title>
-    <link rel="stylesheet" href="./sass/custom.css">
+    <link rel="stylesheet" href="./sass/reducido.css">
 </head>
 <body>
     <main class="d-flex container align-items-center justify-content-center alto-100">
